ocaml (3.10.2-1) experimental; urgency=low

  [ Stefano Zacchiroli ]
  * New upstream release
    - bump OCAMLMINOR in debian/rules accordingly
  * ship .mli files pertaining to ocaml-interp (Closes: #449559)

  [ Samuel Mimram ]
  * Add a dependency from ocaml-base to libx11-dev, (Closes: #465764).

 -- Stefano Zacchiroli <zack@debian.org>  Mon, 03 Mar 2008 10:15:33 +0100

ocaml (3.10.1-1) unstable; urgency=low

  [ Samuel Mimram ]
  * New upstream release.
  * Removed arm_ccheckbound_typo.dpatch, integrated upstream.

  [ Stefano Zacchiroli ]
  * fix vcs-svn field to point just above the debian/ dir

  [ Ralf Treinen ]
  * Policy: add section on correct spelling OCaml, bump version to 0.7.2

  [ Julien Cristau ]
  * Add ${shlibs:Depends} and ${misc:Depends} to all packages.

 -- Samuel Mimram <smimram@debian.org>  Tue, 05 Feb 2008 18:28:56 +0100

ocaml (3.10.0-13) unstable; urgency=low

  [ Stefano Zacchiroli ]
  * fix the cdbs class to pass -I flags down to ocamldoc

 -- Stefano Zacchiroli <zack@debian.org>  Fri, 28 Dec 2007 15:48:54 +0100

ocaml (3.10.0-12) unstable; urgency=low

  [ Julien Cristau ]
  * libgraphics.a is built for ocamlc, not ocamlopt.  Install it
    unconditionally in the ocaml package.  Have ocaml replace ocaml-nox
    because of this move (closes: #457569).  Thanks, Peter Palfrader!

 -- Samuel Mimram <smimram@debian.org>  Wed, 26 Dec 2007 14:03:36 +0100

ocaml (3.10.0-11) unstable; urgency=low

  [ Stefano Zacchiroli ]
  * explicitely chmod +x ocamldoc-api-ref-config during build

 -- Stefano Zacchiroli <zack@debian.org>  Wed, 19 Dec 2007 12:15:08 +0100

ocaml (3.10.0-10) unstable; urgency=low

  [ Stefano Zacchiroli ]
  * ignore ocamldoc-api-ref-config when invoking dh_fixperms, so that it
    remains executable (closes: #457014)

 -- Stefano Zacchiroli <zack@debian.org>  Wed, 19 Dec 2007 08:37:02 +0100

ocaml (3.10.0-9) unstable; urgency=low

  [ Samuel Mimram ]
  * Suggest "tarballs" instead of "upstream" in the policy as directory name